// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton demos > demo: Active 1`] = `
"<div class="ant-skeleton ant-skeleton-active" role="status" aria-busy="true" aria-label="Loading content">
  <!--v-if-->
  <div class="ant-skeleton-content">
    <h3 class="ant-skeleton-title"></h3>
    <ul class="ant-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton demos > demo: Basic 1`] = `
"<div class="ant-skeleton" role="status" aria-busy="true" aria-label="Loading content">
  <!--v-if-->
  <div class="ant-skeleton-content">
    <h3 class="ant-skeleton-title"></h3>
    <ul class="ant-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton demos > demo: Children 1`] = `
"<div class="ant-space ant-space-vertical" style="column-gap: 16px; row-gap: 16px; width: 100%;">
  <div>
    <h4>Ant Design Vue, a design language</h4>
    <p> We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently. </p>
  </div><button class="ant-btn ant-btn-solid ant-btn-md" type="button">
    <!--v-if-->
    <!--v-if--><span class="ant-btn-content">Show Skeleton</span>
  </button>
</div>"
`;

exports[`Skeleton demos > demo: Complex 1`] = `
"<div class="ant-skeleton ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
  <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
  <div class="ant-skeleton-content">
    <h3 class="ant-skeleton-title"></h3>
    <ul class="ant-skeleton-paragraph">
      <li></li>
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton demos > demo: Element 1`] = `
"<div class="ant-space ant-space-horizontal ant-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <div class="ant-skeleton ant-skeleton-element" aria-hidden="true"><span class="ant-skeleton-button"></span></div>
  <div class="ant-skeleton ant-skeleton-element" aria-hidden="true"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
  <div class="ant-skeleton ant-skeleton-element" aria-hidden="true" style="width: 200px;"><span class="ant-skeleton-input"></span></div>
</div>
<br>
<br>
<div class="ant-skeleton ant-skeleton-element" aria-hidden="true"><span class="ant-skeleton-button"></span></div>
<br>
<br>
<div class="ant-skeleton ant-skeleton-element" aria-hidden="true"><span class="ant-skeleton-image"><svg viewBox="0 0 1098 1024" xmlns="http://www.w3.org/2000/svg" class="ant-skeleton-image-svg"><path d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z" fill="#bfbfbf"></path></svg></span></div>
<div class="ant-divider ant-divider-horizontal" role="separator" aria-orientation="horizontal">
  <!--v-if-->
</div>
<form class="ant-form ant-form-inline" style="margin: 16px 0px;">
  <div class="ant-form-item" data-field-id="">
    <div class="ant-form-item-label"><label>
        <!--v-if-->Active
        <!--v-if--><span class="ant-form-item-colon">:</span>
        <!--v-if-->
      </label></div>
    <div class="ant-form-item-control">
      <div class="ant-form-item-control-input">
        <div class="ant-form-item-control-input-content"><button type="button" role="switch" aria-checked="false" class="ant-switch">
            <!--v-if-->
            <div class="ant-switch-handle">
              <!--v-if-->
            </div><span class="ant-switch-inner"><span class="ant-switch-inner-checked"></span><span class="ant-switch-inner-unchecked"></span></span>
          </button></div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="ant-form-item" data-field-id="">
    <div class="ant-form-item-label"><label>
        <!--v-if-->Button Block
        <!--v-if--><span class="ant-form-item-colon">:</span>
        <!--v-if-->
      </label></div>
    <div class="ant-form-item-control">
      <div class="ant-form-item-control-input">
        <div class="ant-form-item-control-input-content"><button type="button" role="switch" aria-checked="false" class="ant-switch">
            <!--v-if-->
            <div class="ant-switch-handle">
              <!--v-if-->
            </div><span class="ant-switch-inner"><span class="ant-switch-inner-checked"></span><span class="ant-switch-inner-unchecked"></span></span>
          </button></div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="ant-form-item" data-field-id="">
    <div class="ant-form-item-label"><label>
        <!--v-if-->Size
        <!--v-if--><span class="ant-form-item-colon">:</span>
        <!--v-if-->
      </label></div>
    <div class="ant-form-item-control">
      <div class="ant-form-item-control-input">
        <div class="ant-form-item-control-input-content">
          <div class="ant-radio-group ant-radio-group-default ant-radio-group-outline" role="radiogroup"><label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><input type="radio" class="ant-radio-button-input" checked="" role="radio" aria-checked="true"><span class="ant-radio-button-inner">Default</span></label><label class="ant-radio-button-wrapper"><input type="radio" class="ant-radio-button-input" role="radio" aria-checked="false"><span class="ant-radio-button-inner">Large</span></label><label class="ant-radio-button-wrapper"><input type="radio" class="ant-radio-button-input" role="radio" aria-checked="false"><span class="ant-radio-button-inner">Small</span></label></div>
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="ant-form-item" data-field-id="">
    <div class="ant-form-item-label"><label>
        <!--v-if-->Button Shape
        <!--v-if--><span class="ant-form-item-colon">:</span>
        <!--v-if-->
      </label></div>
    <div class="ant-form-item-control">
      <div class="ant-form-item-control-input">
        <div class="ant-form-item-control-input-content">
          <div class="ant-radio-group ant-radio-group-default ant-radio-group-outline" role="radiogroup"><label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><input type="radio" class="ant-radio-button-input" checked="" role="radio" aria-checked="true"><span class="ant-radio-button-inner">Default</span></label><label class="ant-radio-button-wrapper"><input type="radio" class="ant-radio-button-input" role="radio" aria-checked="false"><span class="ant-radio-button-inner">Round</span></label><label class="ant-radio-button-wrapper"><input type="radio" class="ant-radio-button-input" role="radio" aria-checked="false"><span class="ant-radio-button-inner">Circle</span></label></div>
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="ant-form-item" data-field-id="">
    <div class="ant-form-item-label"><label>
        <!--v-if-->Avatar Shape
        <!--v-if--><span class="ant-form-item-colon">:</span>
        <!--v-if-->
      </label></div>
    <div class="ant-form-item-control">
      <div class="ant-form-item-control-input">
        <div class="ant-form-item-control-input-content">
          <div class="ant-radio-group ant-radio-group-default ant-radio-group-outline" role="radiogroup"><label class="ant-radio-button-wrapper"><input type="radio" class="ant-radio-button-input" role="radio" aria-checked="false"><span class="ant-radio-button-inner">Square</span></label><label class="ant-radio-button-wrapper ant-radio-button-wrapper-checked"><input type="radio" class="ant-radio-button-input" checked="" role="radio" aria-checked="true"><span class="ant-radio-button-inner">Circle</span></label></div>
        </div>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
</form>"
`;

exports[`Skeleton demos > demo: List 1`] = `
"<div data-v-13be45db=""><button data-v-13be45db="" type="button" role="switch" aria-checked="false" class="ant-switch">
    <!--v-if-->
    <div class="ant-switch-handle">
      <!--v-if-->
    </div><span class="ant-switch-inner"><span class="ant-switch-inner-checked"></span><span class="ant-switch-inner-unchecked"></span></span>
  </button>
  <div data-v-13be45db="" class="ant-list ant-list-split ant-list-vertical">
    <!--v-if-->
    <ul class="ant-list-items">
      <li data-v-13be45db="" class="ant-list-item">
        <div class="ant-list-item-main">
          <div class="ant-list-item-content">
            <div data-v-13be45db="" class="ant-skeleton ant-skeleton-active ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
              <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
              <div class="ant-skeleton-content">
                <h3 class="ant-skeleton-title"></h3>
                <ul class="ant-skeleton-paragraph">
                  <li></li>
                  <li style="width: 61%;"></li>
                </ul>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <div class="ant-list-item-extra"></div>
      </li>
      <li data-v-13be45db="" class="ant-list-item">
        <div class="ant-list-item-main">
          <div class="ant-list-item-content">
            <div data-v-13be45db="" class="ant-skeleton ant-skeleton-active ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
              <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
              <div class="ant-skeleton-content">
                <h3 class="ant-skeleton-title"></h3>
                <ul class="ant-skeleton-paragraph">
                  <li></li>
                  <li style="width: 61%;"></li>
                </ul>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <div class="ant-list-item-extra"></div>
      </li>
      <li data-v-13be45db="" class="ant-list-item">
        <div class="ant-list-item-main">
          <div class="ant-list-item-content">
            <div data-v-13be45db="" class="ant-skeleton ant-skeleton-active ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
              <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
              <div class="ant-skeleton-content">
                <h3 class="ant-skeleton-title"></h3>
                <ul class="ant-skeleton-paragraph">
                  <li></li>
                  <li style="width: 61%;"></li>
                </ul>
              </div>
            </div>
          </div>
          <!--v-if-->
        </div>
        <div class="ant-list-item-extra"></div>
      </li>
      <!--v-if-->
    </ul>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>"
`;
